--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
         "create-c": "./dist/index.js"
     },
     "scripts": {
-        "run": "./node_modules/.bin/tsc && node dist/index.js",
+        "run": "npm run build && node dist/index.js",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "./node_modules/.bin/tsc src/index.ts"
+        "build": "./node_modules/.bin/tsc"
     },
     "repository": {
         "type": "git",
