adds pre-launch task

--- a/template/.vscode/launch.json
+++ b/template/.vscode/launch.json
@@ -14,7 +14,8 @@
             "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
-            "MIMode": "lldb"
+            "MIMode": "lldb",
+            "preLaunchTask": "make"
         }
     ]
 }
